# chatbot-genai

./: .gitignore  README.md  alembic.ini  create_db.py  database.py  main.py  pyproject.toml  requirements.txt  verify_tables.py
controllers/: authcontroller.py  chat_controller.py  file_controller.py  usercontroller.py
migrations/: env.py
migrations/versions/: d434a83bc918_initial_migration.py
models/: __init__.py  chat.py  file.py  user.py
routers/: auth.py  chat.py  upload.py  users.py
schemas/: chat_schemas.py  file_schemas.py  user_schemas.py
services/: auth_service.py  chat_service.py  user_service.py  vector_store.py
utils/: deps.py  jwt.py  security.py
